--- a/package.json
+++ b/package.json
@@ -13,5 +13,16 @@
 	"dependencies": {
 		"doge-socket": "^0.0.1",
 		"uuid": "^8.3.2"
-	}
+	},
+	"directories": {
+		"lib": "lib"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/prokopschield/doge-fetch.git"
+	},
+	"bugs": {
+		"url": "https://github.com/prokopschield/doge-fetch/issues"
+	},
+	"homepage": "https://github.com/prokopschield/doge-fetch#readme"
 }
